--- a/조승현/hackathon2-frontend/style.css
+++ b/조승현/hackathon2-frontend/style.css
@@ -12,6 +12,7 @@
   margin-left: auto;
   margin-right: auto;
   padding-top: 40px;
+  position: relative;
 }
 .title {
   width: 1800px;
@@ -149,9 +150,6 @@
   border: 0;
   color: white;
 }
-.user-login-id{
-
-}
 
 
 
@@ -163,9 +161,6 @@
   padding-top: 20px;
   padding-left: 20px;
   border: 2px solid;
-}
-.user-info-id {
-
 }
 .user-info span {
   display: inline-block;
@@ -214,4 +209,141 @@
   outline: none;
   color: white;
   font-size: 50px;
+}
+
+
+.left-bar {
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  width: 560px;
+  height: 1000px;
+  color: white;
+}
+.left-bar ul {
+  list-style: none;
+}
+.left-bar li {
+  display: inline-block;
+  width: 400px;
+  height: 45px;
+  margin-bottom: 10px;
+  font-size: 38px;
+  overflow: hidden;
+  color: white;
+}
+.left-bar span {
+  font-size: 40px;
+  margin-left: 10px;
+}
+.users-info {
+  width: 560px;
+  height: 1000px;
+  margin-top: 45px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.right-body {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 1215px;
+  height: 1080px;
+  background-color: blue;
+  color: white;
+}
+
+
+.admin-user-info {
+  width: 1165px;
+  height: 950px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 25px;
+  position: relative;
+}
+
+.admin-nameid {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  width: 500px;
+  height: 440px;
+  padding-top: 10px;
+  box-sizing: border-box;
+}
+
+.admin-etc {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  width: 630px;
+  height: 440px;
+  padding-top: 10px;
+  box-sizing: border-box;
+}
+
+.admin-log {
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+  width: 1145px;
+  height: 470px;
+  padding-top: 10px;
+  box-sizing: border-box;
+}
+
+.admin-nameid .text {
+  font-size: 40px;
+  margin-left: 10px;
+}
+.admin-id {
+  display: inline-block;
+  width: 480px;
+  height: 150px;
+  margin-left: 10px;
+  font-size: 80px;
+  line-height: 150px;
+  background-color: rgb(0, 0, 175);
+  overflow: hidden;
+}
+
+.admin-name {
+  display: inline-block;
+  width: 480px;
+  height: 150px;
+  margin-left: 10px;
+  font-size: 90px;
+  line-height: 150px;
+  background-color: rgb(0, 0, 175);
+  overflow: hidden;
+}
+
+.admin-etc .text {
+  font-size: 40px;
+  margin-left: 10px;
+}
+.admin-etc-text {
+  display: inline-block;
+  width: 610px;
+  height: 360px;
+  margin-left: 10px;
+  margin-top: 10px;
+  font-size: 40px;
+  background-color: rgb(0, 0, 175);
+}
+
+.admin-log .text {
+  font-size: 40px;
+  margin-left: 10px;
+}
+.admin-log-text {
+  display: inline-block;
+  width: 1125px;
+  height: 390px;
+  margin-left: 10px;
+  margin-top: 10px;
+  font-size: 40px;
+  background-color: rgb(0, 0, 175);
 }
