--- a/조승현/hackathon2-frontend/style.css
+++ b/조승현/hackathon2-frontend/style.css
@@ -370,3 +370,146 @@
   text-align: center;
   line-height: 100px;
 }
+
+.bit-title {
+  position: absolute;
+  width: 950px;
+  height: 825px;
+  top: 100px;
+  left: 150px;
+}
+
+.bit-background1 {
+  display: inline-block;
+  width: 300px;
+  height: 625px;
+  font-size: 625px;
+  text-align: center;
+  line-height: 825px;
+  color: white;
+  background-color: blue;
+}
+.bit-background2 {
+  display: inline-block;
+  width: 300px;
+  height: 625px;
+  font-size: 625px;
+  text-align: center;
+  line-height: 825px;
+  color: white;
+  background-color: blue;
+}
+.bit-background3 {
+  display: inline-block;
+  width: 300px;
+  height: 625px;
+  font-size: 625px;
+  text-align: center;
+  line-height: 825px;
+  color: white;
+  background-color: blue;
+}
+
+.bit-text {
+  display: inline-block;
+  width: 925px;
+  height: 300px;
+  margin-left: 12px;
+  font-size: 225px;
+  text-align: center;
+  line-height: 225px;
+  color: white;
+}
+
+.bit-tamp {
+  position: absolute;
+  right: 150px;
+  top: 200px;
+  width: 600px;
+  height: 625px;
+}
+
+
+.bit-tamp input{
+  display: inline-block;
+  width: 525px;
+  height: 75px;
+  margin-left: 35px;
+  margin-bottom: 25px;
+  border-radius: 35px;
+  background-color: unset;
+  border: 8px solid white;
+  outline: none;
+  font-size: 50px;
+  color: white;
+  padding-left: 25px;
+}
+.login-change {
+  width: 180px;
+  height: 70px;
+  background-color: blue;
+  border-radius: 25px;
+  border: 0;
+  margin-bottom: 25px;
+  margin-left: 425px;
+  font-size: 35px;
+  color: white;
+}
+
+
+.bit-login {
+  position: relative;
+  height: 620px;
+}
+
+.bit-signin {
+  position: relative;
+  height: 620px;
+}
+
+.bit-sign-checkname {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  width: 80px;
+  height: 40px;
+  background-color: blue;
+  border-radius: 25px;
+  border: 0;
+  color: white;
+}
+.bit-sign-checkid {
+  position: absolute;
+  top: 139px;
+  right: 25px;
+  width: 80px;
+  height: 40px;
+  background-color: blue;
+  border-radius: 25px;
+  border: 0;
+  color: white;
+}
+.bit-sign-btn {
+  position: absolute;
+  bottom: 80px;
+  right: 30px;
+  width: 180px;
+  height: 80px;
+  background-color: blue;
+  border-radius: 25px;
+  border: 0;
+  color: white;
+  font-size: 40px;
+}
+.bit-login-btn {
+  position: absolute;
+  bottom: 280px;
+  right: 30px;
+  width: 180px;
+  height: 80px;
+  background-color: blue;
+  border-radius: 25px;
+  border: 0;
+  color: white;
+  font-size: 40px;
+}
